.jjconflict-side-12/crates/gammalooprs/src/cff/snapshots/gammalooprs__cff__feynkit__tests__root_contracted_edge.snap
---
source: crates/gammalooprs/src/cff/feynkit.rs
expression: "serde_json::json!({\n    \"expression\": expression, \"surface_cache\": graph.surface_cache,\n})"
---
{
  "expression": {
    "expression": {
      "orientations": [
        {
          "data": {
            "orientation": [
              "Default",
              "Undirected",
              "Default",
              "Undirected",
              "Undirected"
            ]
          },
          "expression": {
            "nodes": [
              {
                "children": [],
                "data": {
                  "Energy": 0
                },
                "id": 0,
                "parent": null
              }
            ]
          },
          "id": 0
        },
        {
          "data": {
            "orientation": [
              "Reversed",
              "Undirected",
              "Reversed",
              "Undirected",
              "Undirected"
            ]
          },
          "expression": {
            "nodes": [
              {
                "children": [],
                "data": {
                  "Energy": 1
                },
                "id": 0,
                "parent": null
              }
            ]
          },
          "id": 1
        }
      ]
    },
    "report": {
      "acyclic_orientations": 2,
      "candidate_orientations": 4,
      "interned_surfaces": 2,
      "unfolded_terms": 2
    },
    "surfaces": {
      "energy_surfaces": [
        {
          "energies": [
            0,
            2
          ],
          "external_shift": {
            "4": -1
          },
          "vertex_set": 1
        },
        {
          "energies": [
            0,
            2
          ],
          "external_shift": {
            "4": 1
          },
          "vertex_set": 1
        }
      ],
      "h_surfaces": []
    }
  },
  "surface_cache": {
    "energy_surfaces": [
      {
        "energies": [
          0,
          2
        ],
        "external_shift": {
          "4": -1
        },
        "vertex_set": 1
      },
      {
        "energies": [
          0,
          2
        ],
        "external_shift": {
          "4": 1
        },
        "vertex_set": 1
      }
    ],
    "h_surfaces": []
  }
}
